# nullscript

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
examples-output/: advanced-features.ts  clean-advanced.ts  hello-world.ts  simple.ts
scripts/: README.md  npm-version.sh  version.sh
src/: cli.rs  cli.ts  errors.rs  keywords.rs  keywords.ts  main.rs  transpiler.rs  transpiler.ts
src/analysis/: analytics.rs  completion.rs  diagnostics.rs  mod.rs
src/cli/: commands.rs  handler.rs  mod.rs
src/common/: files.rs  mod.rs  strings.rs
src/compiler/: mod.rs  transpiler.rs
src/compiler/reverse_transpiler/: mod.rs
src/compiler/transpiler/: mod.rs
src/config/: loader.rs  mod.rs  schema.rs
src/core/: errors.rs  mod.rs  types.rs
src/development/: debugger.rs  mod.rs  watcher.rs
src/errors/: formatting.rs  mod.rs  types.rs
src/language/: keywords.rs  mod.rs  types.rs
src/utils/: commands.rs  files.rs  mod.rs  regex.rs  strings.rs
tests/: 01-variables.ns  02-functions.ns  03-control-flow.ns  04-types.ns  05-operators.ns  06-error-handling.ns  07-imports-exports.ns  08-objects-context.ns  09-comprehensive.ns
