[package]
name = "nullscript"
version = "2.0.3"
edition = "2021"
description = "NullScript: TypeScript with attitude - a fun parody language that compiles to identical TypeScript/JavaScript"
authors = ["NullScript Language Team"]
license = "MIT"
repository = "https://github.com/nullscript-lang/nullscript"
homepage = "https://github.com/nullscript-lang/nullscript#readme"

[[bin]]
name = "nsc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
